my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/990826-0.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/990826-0.c:18:5: error: call to undeclared library function 'abort' with type 'void (void) __attribute__((noreturn))'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   18 |     abort ();
      |     ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/990826-0.c:18:5: note: include the header <stdlib.h> or explicitly provide a declaration for 'abort'
1 error generated.
